--- a/css/style.css
+++ b/css/style.css
@@ -560,7 +560,7 @@ body {
 .screen-placeholder img {
     width: 100%;
     height: 100%;
-    object-fit: fill;
+    object-fit: cover;
 }
 
 .premium-promo {
